# software-engineering

./: .travis.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/algorithm/search/: a_star.h  bellman_ford.h  binary.h  dijkstra.h
src/algorithm/sort/: bubble.h  bucket.h  count.h  heap.h  insertion.h  merge.h  quick.h  radix.h  selection.h  tree.h
src/problem/: balanced_tree.h  binary_search.h  bit_insertion.cc  bit_insertion.h  build_order.cc  build_order.h  char_replacement.cc  char_replacement.h  check_palindrome.cc  check_palindrome.h  common_ancestor.h  common_subsequence.cc  common_subsequence.h  count_pairs.cc  count_pairs.h  eight_queens.h  factorial_zeros.cc  factorial_zeros.h  fibonacci.cc  fibonacci.h  find_permutations.cc  find_permutations.h  fixed_difference.cc  fixed_difference.h  four_cubes.cc  four_cubes.h  free_fields.cc  free_fields.h  hanoi_towers.cc  hanoi_towers.h  last_lines.cc  last_lines.h  list_duplicates.h  list_permutations.cc  list_permutations.h  list_tail.h  magic_index.cc  magic_index.h  matrix_rotation.h  median_tracker.h  (+47 more)
src/structure/graph/: adjacency_list.h
src/structure/list/: forward.h
src/structure/map/: hash.h
src/structure/queue/: impartial.h
src/structure/stack/: array.h  list.h
src/structure/tree/: bayer.h  binary.h  fenwick.h  heap.h  red_black.h  search.h  trie.h
src/structure/tree/heap/: binary.cc  binary.h
src/structure/tree/search/: binary.cc  binary.h
test/: CMakeLists.txt  assess.h  fixture.cc  fixture.h
test/algorithm/search/: a_star.cc  bellman_ford.cc  binary.cc  dijkstra.cc
test/algorithm/sort/: assess.h  bubble.cc  bucket.cc  count.cc  heap.cc  insertion.cc  merge.cc  quick.cc  radix.cc  selection.cc  tree.cc
test/problem/: balanced_tree.cc  binary_search.cc  bit_insertion.cc  build_order.cc  char_replacement.cc  check_palindrome.cc  common_ancestor.cc  common_subsequence.cc  count_pairs.cc  eight_queens.cc  factorial_zeros.cc  fibonacci.cc  find_permutations.cc  fixed_difference.cc  four_cubes.cc  free_fields.cc  hanoi_towers.cc  last_lines.cc  list_duplicates.cc  list_permutations.cc  list_tail.cc  magic_index.cc  matrix_rotation.cc  median_tracker.cc  meter_jump.cc  minimal_tree.cc  multi_stack.cc  nested_permutation.cc  nested_permutations.cc  one_away.cc  palindrome_permutation.cc  palindrome_permutations.cc  parenthesis_combinations.cc  power_set.cc  rectangle_intersection.cc  recursive_multiply.cc  robot_maze.cc  rotate_matrix.cc  solve_cubes.cc  stack_sort.cc  (+11 more)
test/structure/graph/: adjacency_list.cc  assess.h
test/structure/list/: assess.h  forward.cc
test/structure/map/: hash.cc
test/structure/queue/: impartial.cc
test/structure/stack/: array.cc  assess.h  list.cc
test/structure/tree/: bayer.cc  binary.cc  fenwick.cc  heap.cc  red_black.cc  search.cc  trie.cc
test/structure/tree/heap/: binary.cc
test/structure/tree/search/: binary.cc
